bin_PROGRAMS = macer
macer_CPPFLAGS = -I$(top_srcdir)/src
macer_SOURCES = \
		src/byte_slice.cpp \
		src/byte_slice.hpp \
		src/byte_stream.cpp \
		src/byte_stream.hpp \
		src/error.cpp \
		src/error.hpp \
		src/expect.cpp \
		src/expect.hpp \
		src/host_info.hpp \
		src/logger.cpp \
		src/logger.hpp \
		src/main.cpp \
		src/password.cpp \
		src/password.hpp \
		src/span.hpp \
			src/trezor/common.cpp \
			src/trezor/common.hpp \
			src/trezor/crypto.cpp \
			src/trezor/crypto.hpp \
			src/trezor/error.cpp \
			src/trezor/error.hpp \
			src/trezor/usb.cpp \
			src/trezor/usb.hpp \
		src/usb.cpp \
		src/usb.hpp \
		src/wire.hpp \
			src/wire/error.cpp \
			src/wire/error.hpp \
			src/wire/field.hpp \
			src/wire/filters.hpp \
			src/wire/fixed_bytes.hpp \
			src/wire/fwd.hpp \
			src/wire/protobuf.hpp \
				src/wire/protobuf/base.hpp \
				src/wire/protobuf/error.cpp \
				src/wire/protobuf/error.hpp \
				src/wire/protobuf/fwd.hpp \
				src/wire/protobuf/read.cpp \
				src/wire/protobuf/read.hpp \
				src/wire/protobuf/write.cpp \
				src/wire/protobuf/write.hpp \
			src/wire/read.cpp \
			src/wire/read.hpp \
			src/wire/write.cpp \
			src/wire/write.hpp \
			src/wire/traits.hpp \
			src/wire/vector.hpp
